<resources>
    <string name="app_name">Travisit Business</string>
    <string name="app_short_name">Travisit</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="f_auth_welcome_back">Welcome Back</string>
    <string name="f_auth_sign_in">Sign In!</string>
    <string name="hint_email">EMAIL ADDRESS</string>
    <string name="hint_password">PASSWORD</string>
    <string name="sign_in_as">SIGN IN AS</string>
    <string name="forgot_password_q">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="go_to_sign_up">Don\'t have an account? <![CDATA[<font color=#46B8F0>Sign up</font>]]></string>
    <string name="f_registration_hello">Hello,</string>
    <string name="f_registration_sign_up">Sign Up!</string>
    <string name="hint_business_name">BUSINESS NAME</string>
    <string name="switch_agree_to_terms">I agree to the policy &amp; terms</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_to_sign_in">Already have an account? <![CDATA[<font color=#46B8F0>Sign in</font>]]></string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_q_divided">Forgot\nPassword</string>
    <string name="complete_profile_header">Complete Profile</string>
    <string name="categories">Categories</string>
    <string name="send_code">Send Code</string>
    <string name="reset_code_sent">Check your email for the code</string>
    <string name="logo">Logo</string>
    <string name="hint_government_issued_number">GOVERNMENT ISSUED NUMBER</string>
    <string name="submit_for_verification_button">Submit for verification</string>
    <string name="government_issued_id">Government Issued Number</string>
    <string name="book_now">Book now</string>
    <string name="reset_password_code">Reset Password \nCode</string>
    <string name="hint_code">Enter the code your received here</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="unverified_account_status">Account Status: Waiting for Verification</string>
    <string name="unverified_account_status_description">Your account is waiting for verification. When your account is verified, a confirmation mail will be sent to you on your registered email. If you think we\'re late or you have a problem contact us on business-help@travisit.com. Thank you.</string>
    <string name="log_out">Log out</string>
    <string name="congratulations">Congratulations!</string>
    <string name="verified_account_status_description">Your account is verified.</string>
    <string name="go_to_account">Go to home page</string>
    <string name="home_title">Our Offers</string>
    <string name="hint_search_offers">Search offers</string>
    <string name="offer_details_header">Offer Name</string>
    <string name="offer_details_date">06-01-2020  to  08-01-2020</string>
    <string name="description">Description</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="tags">Tags</string>
    <string name="random_number">43</string>
    <string name="random_rating">4.3</string>
    <string name="offer_edit_header">Edit Offer</string>
    <string name="offer_add_header">Add New Offer</string>
    <string name="offer_pictures">Pictures</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_start_date">Start Date</string>
    <string name="hint_end_date">End Date</string>
    <string name="hint_search_tags">Search Tags</string>
    <string name="password_changed_successfully">Password Changed Successfully.</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="go_to_code_page">Already have a code?</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="code_confirmed">Code Confirmed</string>
    <string name="rating">Rating</string>
    <string name="offers">Offers</string>
    <string name="delete_alert">DELETE ALERT</string>
    <string name="confirm_delete_message">Are you sure you want to delete the selected branch? Deleting this branch will delete all its offers permenantly. Do you want to proceed with deleting this branch?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="branches_title">Branches</string>
    <string name="add_branch_title">Add a Branch</string>
    <string name="have_a_new_branch_q">Have a new branch? What are you waiting for? Add it now.</string>
    <string name="hint_branch_name">Branch Name</string>
    <string name="hint_location">Location</string>
    <string name="edit_branch_title">Edit Branch</string>
    <string name="have_an_update_in_branch_q">Have an update in your branch? let us know!</string>
    <string name="add_now">Add now</string>
    <string name="update_now">Save</string>
    <string name="branch">Branch</string>
    <string name="ends_on">Ends on</string>
    <string name="missing_item">Couldn\'t find the Item</string>
    <string name="to">to</string>
    <string name="profile">Profile</string>
    <string name="business_dashboard">Business Dashboard</string>
    <string name="account_settings">Account Settings</string>
    <string name="about_us">About us</string>
    <string name="about_travisit_business">About Travisit Business</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Tell others about Travisit Business</string>
    <string name="rate_app">Rate us on Play Store</string>
    <string name="branches">Branches</string>
    <string name="change_logo"><u>Change Logo</u></string>
    <string name="save_option">Save</string>
    <string name="cancel_option">Cancel</string>
    <string name="edit_option">Edit</string>
    <string name="delete_options">Delete</string>
</resources>
