<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="20dp"
    tools:context=".vvm.destination.ForgotPasswordFragment">
    <!-- Back Arrow -->
    <ImageView
        android:id="@+id/f_forgot_password_iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!-- Forgot Password Header -->
    <TextView
        android:id="@+id/f_forgot_password_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/segoeui_font"
        android:text="@string/forgot_password_q_divided"
        android:textColor="@color/colorHeaderBlackRussian"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/f_forgot_password_iv_back"
        app:layout_constraintTop_toBottomOf="@id/f_forgot_password_iv_back" />
    <!-- Forgot Password Vector -->
    <ImageView
        android:id="@+id/f_forgot_password_vector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_v_forgot_password"
        app:layout_constraintTop_toBottomOf="@id/f_forgot_password_tv_title" />
    <!-- Email Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/f_forgot_password_til_email_address"
        style="@style/customOutLinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/hint_email"
        app:layout_constraintTop_toBottomOf="@id/f_forgot_password_vector">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/f_forgot_password_tiet_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textColor="@color/colorPlaceholderLightGrey" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Send Reset Password Code Button -->
    <Button
        android:id="@+id/f_forgot_password_btn_send_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_gradient_rounded_corners"
        android:enabled="false"
        android:fontFamily="@font/segoeui_bold_font"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:text="@string/send_code"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/f_forgot_password_til_email_address" />
    <!--  Go to code page  -->
    <TextView
        android:id="@+id/f_forgot_password_tv_go_to_code_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/go_to_code_page"
        android:textColor="@color/colorPlaceholderLightGrey"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/f_forgot_password_btn_send_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>