<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:padding="15dp"
    tools:context=".vvm.destination.BranchManagementFragment">
    <!-- Fragment Title -->
    <TextView
        android:id="@+id/f_branch_management_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/add_branch_title"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/segoeui_font"
        android:textStyle="bold"
        android:textColor="@color/colorHeaderBlack"/>
    <!-- Fragment Subtitle -->
    <TextView
        android:id="@+id/f_branch_management_tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        tools:text="@string/have_a_new_branch_q"
        app:layout_constraintTop_toBottomOf="@id/f_branch_management_tv_title"/>
    <!-- Branch Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/f_branch_management_til_branch_name"
        style="@style/customGreenFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:hint="@string/hint_branch_name"
        app:boxStrokeColor="@color/colorGreenMessage"
        app:layout_constraintTop_toBottomOf="@id/f_branch_management_tv_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/f_branch_management_tiet_branch_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_light_font"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorValueGrey" />

    </com.google.android.material.textfield.TextInputLayout>
    <!-- Branch Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/f_branch_management_til_location"
        style="@style/customGreenFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_location"
        app:boxStrokeColor="@color/colorGreenMessage"
        app:layout_constraintTop_toBottomOf="@id/f_branch_management_til_branch_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/f_branch_management_tiet_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_light_font"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:paddingEnd="10dp"
            android:textColor="@color/colorValueGrey" />
    </com.google.android.material.textfield.TextInputLayout>
    <!-- Save Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/f_branch_management_mtbtn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/colorGreenMessage"
        android:fontFamily="@font/segoeui_bold_font"
        android:paddingTop="8dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/f_branch_management_til_location"
        tools:text="Add now" />

</androidx.constraintlayout.widget.ConstraintLayout>